--- a/mobile/package.json
+++ b/mobile/package.json
@@ -8,11 +8,13 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo-google-fonts/dosis": "^0.1.0",
     "@expo-google-fonts/nunito": "^0.1.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.7.5",
     "@react-navigation/stack": "^5.9.2",
     "expo": "~39.0.2",
+    "expo-app-loading": "^1.0.1",
     "expo-constants": "~9.2.0",
     "expo-font": "~8.3.0",
     "expo-image-picker": "~9.1.0",
